--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/user-event": "12.5.0",
     "esm": "^3.2.25",
     "express": "latest",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.1"
+    "socket.io": "3.0.4",
+    "socket.io-client": "3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
