--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "12.5.0",
     "esm": "^3.2.25",
     "express": "latest",
+    "konva": "^7.2.2",
     "mongodb": "^3.6.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-konva": "^17.0.1-3",
     "react-scripts": "3.4.3",
     "socket.io": "3.0.4",
     "socket.io-client": "3.0.4"
