--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "12.5.0",
