--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "esm": "^3.2.25",
     "express": "latest",
     "konva": "^7.2.2",
+    "material-ui-color": "^1.0.0",
     "mongodb": "^3.6.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
