--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -18,6 +19,8 @@
     "konva": "^7.2.2",
     "material-ui-color": "^1.0.0",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.12.3",
+    "passport.socketio": "^3.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-konva": "^17.0.1-3",
