--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "material-ui-color": "^1.0.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.12.3",
+    "notistack": "^1.0.6",
     "passport.socketio": "^3.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
