--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "latest",
     "konva": "^7.2.2",
     "material-ui-color": "^1.0.0",
+    "material-ui-popup-state": "^1.8.2",
     "mongodb": "^3.6.3",
     "mongoose": "^5.12.3",
     "notistack": "^1.0.6",
